Updated pom.xml build in attempt to fix.